--- a/app/views/profile_customers/shared/_option_fields.html.erb
+++ b/app/views/profile_customers/shared/_option_fields.html.erb
@@ -1,14 +1,14 @@
 <div class="opt-1">
-  <%= check_box_tag :flag_access_data, 1, true, id: 'acess-email', class: 'form-check-input' %>
-  <label for="acess-email"> Enviar os dados de acesso </label>
+  <%= check_box_tag :flag_access_data, 1, true, id: 'access-email', class: 'form-check-input' %>
+  <label for="access-email"> Enviar os dados de acesso </label>
 </div>
 
 <div class="opt-2">
-  <%= check_box_tag :flag_generate_documents, 1, false, id: 'acess-docs', class: 'form-check-input' %>
-  <label for="acess-docs"> Emitir documentos </label>
+  <%= check_box_tag :flag_generate_documents, 1, false, id: 'access-docs', class: 'form-check-input' %>
+  <label for="access-docs"> Emitir documentos </label>
 </div>
 
 <div class="opt-3">
-  <%= check_box_tag :flag_signature, 1, false, id: 'acess-data', class: 'form-check-input' %>
-  <label for="acess-data"> Enviar para assinatura </label>
+  <%= check_box_tag :flag_signature, 1, false, id: 'access-data', class: 'form-check-input' %>
+  <label for="access-data"> Enviar para assinatura </label>
 </div>
