--- a/app/views/layouts/shared/_top_menu.html.erb
+++ b/app/views/layouts/shared/_top_menu.html.erb
@@ -51,7 +51,7 @@
             <div class="modal-body">Clique em "Sair" se você relamente deseja encerrar a sessão.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                <%= link_to 'Sair', destroy_admin_session_path, method: :delete, class:"btn btn-primary"%>
+                <%= link_to 'Sair', destroy_admin_session_path, class:"btn btn-primary"%>
             </div>
         </div>
     </div>
